fix(storybook): Improve margins, gaps and line heights on the main navigation elements Card: https://app.clickup.com/t/863h38913

--- a/src/styles/elements/solr/_solr-header.css
+++ b/src/styles/elements/solr/_solr-header.css
@@ -19,7 +19,7 @@
     --solr-header-per-page-form-gap: var(--spacing-s);
 
     border-bottom: var(--solr-header-border-bottom);
-    padding-bottom: var(--solr-header-padding);
+    padding: var(--solr-header-padding);
     margin-bottom: var(--solr-header-margin);
 }
 
